Row Editor mode fix overflow.

--- a/src/sass/editor/_blocks-list.scss
+++ b/src/sass/editor/_blocks-list.scss
@@ -12,12 +12,16 @@
 		min-height: 42px;
 		background-color: #fcddbd;
 		&::after {
+			width: 100%;
 			font-size: 12px;
 			line-height: 42px;
 			text-align: center;
 			content: "Empty Block Click to add elements...";
 		}
 	}
+
+	/*==== Fix Phenix Row ====*/
+	.wp-block-phenix-row > .row {margin-left: 0; margin-right: 0;}
 
 	/*==== Links ====*/
 	a, button {text-decoration: none;}
